# Researcher

./: .env.example  .gitignore  CITATION_MANAGEMENT_DESIGN.md  CLAUDE.md  CLI_USAGE.md  README.md  README.zh-CN.md  TRACE_LOGGER_GUIDE.md  pyproject.toml
examples/: basic_tool_usage.py  file_tools_usage.py  simple_agent.py
examples/1fdc8a95/: FINAL_REPORT.md  analysis_plan.md  question.txt
examples/1fdc8a95/china_market_analysis/: comparative_analysis.md  market_trends.md  overview.md  research_summary.md
examples/1fdc8a95/insurance_capital_structure/: data_collection_plan.md  progress_summary.md  research_framework.md
examples/1fdc8a95/insurance_companies/: comparative_analysis.md  research_methodology.md
examples/1fdc8a95/insurance_comprehensive_analysis/: dimension_analysis.md  overview.md  recommendations.md  scoring_table.md  summary.md
examples/1fdc8a95/insurance_financial_data/: comparative_analysis_2019_2023.md
examples/1fdc8a95/insurance_rankings/: summary.md
examples/1fdc8a95/insurance_research/: credit_ratings_summary.md  dividend_summary.md  research_summary.md
src/researcher/: __init__.py
src/researcher/agents/: __init__.py  analyzer.py  orchestrator.py  searcher.py  writer.py
src/researcher/cli/: __init__.py  main.py  ui.py
src/researcher/core/: __init__.py  agent.py  tool.py  workspace.py
src/researcher/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/researcher/prompts/: analyzer.txt  orchestrator.txt  searcher.txt  (+2 more)
tests/: test_bash_tool.py  test_file_tools.py  test_search_tool.py  test_tool_base.py
(+58 files in other folders)
